--- a/server/package.json
+++ b/server/package.json
@@ -2,17 +2,18 @@
   "name": "findit-app",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "npx nodemon app.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "mysql2": "^3.11.3"
+    "cors": "2.8.5",
+    "dotenv": "16.4.5",
+    "express": "4.21.1",
+    "mysql2": "3.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "3.1.7"
   }
 }
