--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
-MYSQL_HOST = "158.23.50.124"
-MYSQL_USER = "api-server"
-MYSQL_PASSWORD = "apiserver-05skbd"
+MYSQL_HOST = "localhost"
+MYSQL_USER = "root"
+MYSQL_PASSWORD = "skcaba0305serv"
 MYSQL_DATABASE = "finditbd"
+MYSQL_PORT = 3306
