--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "cors": "2.8.5",
     "dotenv": "16.4.5",
-    "express": "4.21.1",
-    "mysql2": "3.11.3"
+    "express": "^4.21.1",
+    "mysql2": "3.11.3",
+    "nodenv": "^0.1.0"
   },
   "devDependencies": {
-    "nodemon": "3.1.7"
+    "nodemon": "^3.1.7"
   }
 }
