--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
-MYSQL_HOST = "localhost"
-MYSQL_USER = "root"
+MYSQL_HOST = "158.23.50.124"
+#MYSQL_HOST = "localhost"
+MYSQL_USER = "fiadminbd"
 MYSQL_PASSWORD = "skcaba0305serv"
 MYSQL_DATABASE = "finditbd"
-MYSQL_PORT = 3306
+MYSQL_PORT = 1024
