--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
-MYSQL_HOST = "158.23.50.124"
-#MYSQL_HOST = "localhost"
-MYSQL_USER = "fiadminbd"
+#MYSQL_HOST = "158.23.50.124"
+MYSQL_HOST = "localhost"
+MYSQL_USER = "root"
+#MYSQL_USER = "fiadminbd"
 MYSQL_PASSWORD = "skcaba0305serv"
 MYSQL_DATABASE = "finditbd"
-MYSQL_PORT = 1024
+#MYSQL_PORT = 1024
