--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,20 @@
 {
   "name": "findit-app",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "main-server-main-api.js",
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "npx nodemon app.js"
+    "dev": "npx nodemon server-main-api.js"
   },
   "dependencies": {
     "cors": "2.8.5",
     "dotenv": "16.4.5",
-    "express": "^4.21.1",
+    "express": "4.21.1",
     "mysql2": "3.11.3",
     "nodenv": "^0.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "3.1.7"
   }
 }
