Added interfaces homeScreen

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 #MYSQL_HOST = "158.23.50.124"
-MYSQL_HOST = "localhost"
-MYSQL_USER = "root"
+MYSQL_HOST = "finditappbd.mysql.database.azure.com"
+MYSQL_USER = "fiadminroot"
 #MYSQL_USER = "fiadminbd"
-MYSQL_PASSWORD = "skcaba0305serv"
+MYSQL_PASSWORD = "skcaba0305serv#"
 MYSQL_DATABASE = "finditbd"
 #MYSQL_PORT = 1024
