--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,26 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@expo/ngrok": "^4.1.3",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@types/react": "~18.2.79",
     "expo": "~51.0.28",
+    "expo-font": "^12.0.10",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-ionicons": "^4.6.5",
+    "react-native-reanimated": "3.10.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^3.35.0",
     "react-native-web": "~0.19.10",
-    "undefined": "."
+    "react-navigation": "^5.0.0",
+    "typescript": "~5.3.3",
+    "undefined": ".",
+    "use-latest-callback": "^0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
