--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -11,10 +11,12 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@expo/ngrok": "^4.1.3",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@types/react": "~18.2.79",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-font": "^12.0.10",
     "expo-status-bar": "~1.12.1",
