--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@types/react": "~18.2.79",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "expo": "~51.0.28",
     "expo-font": "^12.0.10",
     "expo-status-bar": "~1.12.1",
