--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,11 @@
 #MYSQL_HOST = "158.23.50.124"
-#MYSQL_HOST = "finditappbd.mysql.database.azure.com"
-#MYSQL_USER = "fiadminroot"
+MYSQL_HOST = "finditappbd.mysql.database.azure.com"
+MYSQL_USER = "fiadminroot"
 #MYSQL_USER = "fiadminbd"
-#MYSQL_PASSWORD = "skcaba0305serv#"
-MYSQL_HOST = 'localhost'
-MYSQL_USER = 'root'
-MYSQL_PASSWORD = 'skcaba0305serv'
+MYSQL_PASSWORD = "skcaba0305serv#"
+#MYSQL_HOST = 'localhost'
+#MYSQL_USER = 'root'
+#MYSQL_PASSWORD = 'skcaba0305serv'
 MYSQL_DATABASE = "finditbd"
 MYSQL_PORT = 3306
 #MYSQL_PORT = 1024
