--- a/client/package.json
+++ b/client/package.json
@@ -12,20 +12,31 @@
     "@expo/metro-runtime": "~3.2.3",
     "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@types/react": "~18.2.79",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "expo": "~51.0.28",
     "expo-font": "^12.0.10",
+    "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
+    "pod-install": "^0.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-image-crop-picker": "^0.41.4",
+    "react-native-image-picker": "^7.1.2",
     "react-native-ionicons": "^4.6.5",
+    "react-native-progress-steps": "^1.3.4",
     "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.35.0",
