--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "firebase-admin": "^12.7.0",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "3.11.3",
     "nodemailer": "^6.9.16",
     "uuid": "^11.0.2"
