--- a/server/package.json
+++ b/server/package.json
@@ -8,19 +8,19 @@
     "dev": "npx nodemon server-main-api.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "2.4.3",
     "cors": "2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "16.4.5",
     "express": "4.21.1",
-    "firebase-admin": "^12.7.0",
-    "googleapis": "^144.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
+    "firebase-admin": "12.7.0",
+    "googleapis": "144.0.0",
+    "jsonwebtoken": "9.0.2",
+    "multer": "1.4.5-lts.1",
     "mysql2": "3.11.3",
-    "nodemailer": "^6.9.16",
-    "uuid": "^11.0.2"
+    "nodemailer": "6.9.16",
+    "uuid": "11.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "3.1.7"
   }
 }
