--- a/client/package.json
+++ b/client/package.json
@@ -9,37 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
+    "@babel/core": "^7.26.0",
+    "@expo/metro-runtime": "~4.0.0",
     "@expo/ngrok": "4.1.3",
-    "@react-native-async-storage/async-storage": "2.0.0",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.1.1",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "6.6.1",
     "@react-navigation/native": "6.1.18",
     "@react-navigation/native-stack": "6.11.0",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "axios": "1.7.7",
     "bcryptjs": "2.4.3",
     "buffer": "6.0.3",
     "date-fns": "4.1.0",
     "dayjs": "1.11.13",
-    "expo": "~51.0.28",
-    "expo-font": "12.0.10",
-    "expo-image-picker": "15.0.7",
-    "expo-status-bar": "~1.12.1",
+    "eas-cli": "^13.3.0",
+    "expo": "^52.0.7",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.2",
+    "expo-status-bar": "~2.0.0",
     "moment": "2.30.1",
     "pod-install": "0.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "2.20.2",
-    "react-native-image-crop-picker": "0.41.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "7.1.2",
     "react-native-ionicons": "4.6.5",
     "react-native-progress-steps": "1.3.4",
-    "react-native-reanimated": "3.10.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "3.35.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.10",
     "react-navigation": "5.0.0",
     "typescript": "~5.3.3",
@@ -47,8 +48,19 @@
     "use-latest-callback": "0.2.1"
   },
   "devDependencies": {
-    "@babel/core": "7.20.0",
     "nodemon": "3.1.7"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false,
+        "exclude": [
+          "react-native-ionicons",
+          "axios",
+          "react-navigation"
+        ]
+      }
+    }
   },
   "private": true
 }
