Cambio de conexion de axios por fetch

--- a/client/app.json
+++ b/client/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/images/favicon.png",
     "userInterfaceStyle": "light",
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/favicon.png",
       "resizeMode": "contain",
