--- a/client/package.json
+++ b/client/package.json
@@ -12,16 +12,16 @@
     "@babel/core": "^7.26.0",
     "@expo/metro-runtime": "~4.0.0",
     "@expo/ngrok": "4.1.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.1.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.9.0",
-    "@react-navigation/bottom-tabs": "6.6.1",
-    "@react-navigation/native": "6.1.18",
-    "@react-navigation/native-stack": "6.11.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@types/react": "~18.3.12",
-    "axios": "1.7.7",
-    "bcryptjs": "2.4.3",
-    "buffer": "6.0.3",
+    "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
     "date-fns": "4.1.0",
     "dayjs": "1.11.13",
     "eas-cli": "^13.4.2",
@@ -40,7 +40,7 @@
     "react-native-progress-steps": "1.3.4",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "^4.0.0",
     "react-native-web": "~0.19.10",
     "react-navigation": "5.0.0",
     "typescript": "~5.3.3",
